<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".CreateAccountActivity">

    <!-- provvisorio -->

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView2"
        android:name="com.fabioalesci.satishop.BasketFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_basket" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentContainerView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/emailView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/label_email"
                android:textAppearance="@style/h1" />

            <EditText
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@string/label_info_account_email" />

            <TextView
                android:id="@+id/pasView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/label_password"
                android:textAppearance="@style/h1" />

            <EditText
                android:id="@+id/pasText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:inputType="textPassword"
                android:text="@string/label_info_account_password" />

            <TextView
                android:id="@+id/nameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_name"
                android:textAppearance="@style/h1" />

            <EditText
                android:id="@+id/editNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/label_name" />

            <TextView
                android:id="@+id/nameView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_surname"
                android:textAppearance="@style/h1" />

            <EditText
                android:id="@+id/editNameText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/label_surname" />

            <TextView
                android:id="@+id/dateView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/label_birthday"
                android:textAppearance="@style/h1" />

            <EditText
                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="46dp"
                android:ems="10"
                android:text="@string/label_info_account_birthday" />

            <TextView
                android:id="@+id/phoneView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_phone"
                android:textAppearance="@style/h1" />

            <EditText
                android:id="@+id/phoneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/label_info_account_phone_number" />

            <TextView
                android:id="@+id/addressView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/label_street"
                android:textAppearance="@style/h1" />

            <EditText
                android:id="@+id/addressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="138dp"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:text="@string/label_street" />

            <TextView
                android:id="@+id/capView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/label_info_account_street_number"
                android:textAppearance="@style/h1" />


            <EditText
                android:id="@+id/capText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="138dp"
                android:ems="10"
                android:inputType="textCapCharacters"
                android:text="@string/label_info_account_street_number" />

            <TextView
                android:id="@+id/postalCodeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/label_info_account_postal_code"
                android:textAppearance="@style/h1" />


            <EditText
                android:id="@+id/postalCodeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="138dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/label_info_account_postal_code" />

            <TextView
                android:id="@+id/cityView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/label_info_account_city"
                android:textAppearance="@style/h1" />

            <EditText
                android:id="@+id/cityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="138dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/label_info_account_city" />

            <TextView
                android:id="@+id/provinceView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/label_info_account_district"
                android:textAppearance="@style/h1" />

            <EditText
                android:id="@+id/provinceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="138dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/label_info_account_district" />

            <TextView
                android:id="@+id/payModeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_info_account_payment_method"
                android:textAppearance="@style/h1" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/payButton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/paybut1" />

                <RadioButton
                    android:id="@+id/payButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/paybut2" />
            </RadioGroup>

            <TextView
                android:id="@+id/cardNumbView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/label_info_account_card_number"
                android:textAppearance="@style/h1" />

            <EditText
                android:id="@+id/cardNumbText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="138dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/label_info_account_card_number" />

            <TextView
                android:id="@+id/expirationView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/label_info_account_card_expiring_date"
                android:textAppearance="@style/h1" />

            <EditText
                android:id="@+id/expirationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="138dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/label_info_account_card_expiring_date" />

            <TextView
                android:id="@+id/securityCodeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/label_info_account_card_expiring_date"
                android:textAppearance="@style/h1" />

            <EditText
                android:id="@+id/securityCodeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="138dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/label_info_account_card_expiring_date" />

            <Button
                android:id="@+id/regButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:text="@string/button_sign_in" />

        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>