<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <!-- provvisorio -->

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView2"
        android:name="com.fabioalesci.satishop.BasketFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_basket" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentContainerView2"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintTop_toBottomOf="@id/fragmentContainerView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/label_name"
                android:textAppearance="@style/h1"
                app:layout_constraintBaseline_toBaselineOf="@+id/editNameText"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/label_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/nameView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_surname"
                android:textAppearance="@style/h1"
                app:layout_constraintBaseline_toBaselineOf="@+id/editNameText2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameView" />

            <EditText
                android:id="@+id/editNameText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/label_surname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/nameView2"
                app:layout_constraintTop_toBottomOf="@id/editNameText" />

            <TextView
                android:id="@+id/emailView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/label_email"
                android:textAppearance="@style/h1"
                app:layout_constraintBaseline_toBaselineOf="@+id/emailText"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@string/label_info_account_email"
                app:layout_constraintStart_toEndOf="@+id/emailView"
                app:layout_constraintTop_toBottomOf="@+id/editNameText2" />

            <TextView
                android:id="@+id/pasView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/label_password"
                android:textAppearance="@style/h1"
                app:layout_constraintBaseline_toBaselineOf="@+id/pasText"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/pasText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:inputType="textPassword"
                android:text="@string/label_info_account_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/pasView"
                app:layout_constraintTop_toBottomOf="@+id/emailText" />

            <TextView
                android:id="@+id/dateView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/label_birthday"
                android:textAppearance="@style/h1"
                app:layout_constraintBaseline_toBaselineOf="@+id/dateText"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="46dp"
                android:ems="10"
                android:text="@string/label_info_account_birthday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/dateView"
                app:layout_constraintTop_toBottomOf="@+id/pasText" />

            <TextView
                android:id="@+id/addressView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/label_street"
                android:textAppearance="@style/h1"
                app:layout_constraintBaseline_toBaselineOf="@+id/addressText"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/addressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="138dp"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:text="@string/label_street"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/addressView"
                app:layout_constraintTop_toBottomOf="@+id/dateText" />

            <TextView
                android:id="@+id/capView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/label_info_account_street_number"
                android:textAppearance="@style/h1"
                app:layout_constraintBaseline_toBaselineOf="@+id/capText"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/capText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="138dp"
                android:ems="10"
                android:inputType="textCapCharacters"
                android:text="@string/label_info_account_street_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/capView"
                app:layout_constraintTop_toBottomOf="@+id/addressText" />

            <TextView
                android:id="@+id/payModeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/label_info_account_payment_method"
                android:textAppearance="@style/h1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/capView" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/payModeView"
                app:layout_constraintTop_toBottomOf="@id/capText">

                <RadioButton
                    android:id="@+id/payButton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/paybut1" />

                <RadioButton
                    android:id="@+id/payButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/paybut2" />
            </RadioGroup>

            <Button
                android:id="@+id/regButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/barriera" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barriera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="radioGroup,payModeView" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>